--- a/JSP/portifolio-jsp/NewFile.css
+++ b/JSP/portifolio-jsp/NewFile.css
@@ -1,9 +1,211 @@
-.imagem-fundo{
-    background-image: url('../assets/imagem-fundo.jpg');
-    height: 100vh;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: sans-serif;
+    background-color: #222226;
+}
+
+header{
+    background-color: #62d2ff;
     width: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: black;
+    border-bottom: 2px solid rgb(55, 41, 121);
+
+}
+
+header .boas-vindas{
+    margin: 0 auto;
+    padding: 25px;
+    text-align: center;
+    border-bottom: 1px solid rgb(55, 41, 121);
+    width: 400px;
+    
+}
+
+.boas-vindas h1{
+    color: rgb(55, 41, 121);
+    text-transform: uppercase;
+    padding: 10px;
+}
+
+.boas-vindas p{
+    color: rgb(55, 41, 121);
+    text-transform: uppercase;
+    line-height: 20px;
+    padding: 10px;
+}
+
+header nav{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+header nav ul {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    padding: 10px;
+}
+
+
+header nav ul li a{
+    color: rgb(55, 41, 121);
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+header nav ul li a:hover{
+    color:#7205ee;
+ 
+}
+  
+.principal{
+    margin: 20px auto;
+    padding: 50px;
+    background-color: #F2F2F2;
+    width: 600px;
+    border-radius: 25px;
+}
+.Sobre-mim{
+    margin: 20px auto;
+    height: 100%;
+    text-align: center;
+}
+
+.texto-info{
+    padding: 20px;
+}
+
+ .texto-info p{
+    color: rgb(55, 41, 121);
+    padding: 5px;
+    text-transform: uppercase;
+    font-weight: 500;
+ } 
+
+ .texto-info h1{
+    color: rgb(55, 41, 121);
+    padding: 5px;
+    text-transform: uppercase;
+    font-weight: 600;
+ } 
+
+
+ .imagem-fundo{
+   padding: 30px;
+   margin: 30px auto;
+   text-align: center;
+   text-transform: uppercase;
+   line-height: 30px;
+   color: #363973;
+   border-top: 1px solid #222A59;
+   border-bottom: 1px solid #222A59;
+   width: 400px;
+ }
+
+ .real{
+    text-align: center;
+    margin: 0 auto;
+    padding: 20px;
+    display: flex;
+    align-items:center ;
+    flex-direction: column;
+    height: 100%;
+    gap: 20px;
+
+ }
+
+ .real h2 {
+    text-transform: uppercase;
+    color: #222A59;
+ }
+
+ .form-real{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    gap :10px;
+    padding: 20px;
+    line-height: 30px;
+ }
+
+.form-real p {
+    color: #222226;
+    font-weight: 600;
+}
+
+.form-real .botao{
+    padding: 10px 20px;
+    color: white;
+    background-color: #363973;
+    border: 1px solid #363973;
+    border-radius: 25px;
+}
+
+.dolar{
+    text-align: center;
+    margin: 0 auto;
+    padding: 20px;
+    display: flex;
+    align-items:center ;
+    flex-direction: column;
+    height: 100%;
+    gap: 20px;
+
+ }
+
+ .dolar h2 {
+    text-transform: uppercase;
+    color: #222A59;
+ }
+
+ .form-dolar{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    gap :10px;
+    padding: 20px;
+    line-height: 40px;
+ }
+
+.form-dolar p {
+    color: #222226;
+    font-weight: 600;
+    
+}
+
+.form-dolar .botao{
+    padding: 10px 20px;
+    color: white;
+    background-color: #363973;
+    border: 1px solid #363973;
+    border-radius: 25px;
+}
+
+input{
+    padding: 10px 15px;
+}
+
+
+.JSP{
+    text-transform: uppercase;
+    color: #222A59;
+    margin: 0 auto;
+    text-align: center;
+}
+
+footer p {
+    background-color: #363973;
+    padding: 20px;
+    text-align: center;
+    margin: 0 auto;
+    color:  white;
+    font-weight: 500;
 
 }
